<resources>
    <string name="app_name">星头条</string>
    <string name="title_news">首页</string>
    <string name="title_photo">美图</string>
    <string name="title_video">视频</string>
    <string name="title_mine">我的</string>
    <string name="channel_my_header">我的频道</string>
    <string name="my_header_tip">点击进入频道</string>
    <string name="edit_mode">编辑</string>
    <string name="channel_rec">频道推荐</string>
    <string name="add_channel">点击添加频道</string>
    <string name="search_content">即刻搜索内容,打开新视界...</string>
    <string name="search_scan">扫呀</string>
    <string name="no_network_tips">似乎出了点问题...</string>
    <string name="reload">重新加载</string>
    <string name="network_error">你的网络开小差了(〒︿〒)</string>
    <string name="network_error_tips2">网络异常,请下拉刷新</string>
    <!--状态码:000000 代表请求成功-->
    <string name="request_success">请求成功</string>
    <string name="default_channel_name_1">社会</string>
    <string name="default_channel_cid_1">news_society</string>
    <string name="default_channel_name_2">娱乐</string>
    <string name="default_channel_cid_2">news_entertainment</string>
    <string name="success">success</string>
    <string name="collect_news_tip">该新闻已收藏过</string>
    <string name="collect_news_success">收藏成功</string>
    <string name="permission_request_tip">请在设置界面授予权限</string>
    <string name="open_browser_tip">该链接无法使用浏览器打开</string>
    <string name="search">搜索</string>
    <string name="album">图库</string>
    <string name="videos">影片</string>
    <string name="edit_user_info">编辑个人资料</string>
    <string name="my_collect">我的收藏</string>
    <string name="settings">设置</string>
    <string name="user_name">用户名</string>

    <string-array name="BottomNavigationNames">
        <item>首页</item>
        <item>美图</item>
        <item>视频</item>
        <item>我的</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">新闻</string>
    <string name="photos">图片</string>
    <string name="nothing_show_tip">这里空空如也(´･_･`)</string>
    <string name="basic_setting">基本设置</string>
    <string name="auto_play">视频自动播放</string>
    <string name="night_mode">夜间模式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="sp_nightmode">nightmode</string>


    <string name="shortcut_unavailable">功能不可用</string>
    <string name="shortcut_scan_long">扫一扫</string>
    <string name="shortcut_scan_short">扫描</string>
    <string name="shortcut_search_long">搜索</string>
    <string name="shortcut_search_short">搜索</string>


</resources>
