<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="13dp">

    <TextView
        android:id="@+id/my_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_my_header"
        android:textColor="@color/default_text"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/id_my_header_tip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/my_header"
        android:text="@string/my_header_tip"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/id_edit_mode"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:background="@drawable/channel_edit_shape"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/edit_mode"
        android:textAlignment="center"
        android:textColor="#00BFFF"
        android:textSize="14sp" />
</RelativeLayout>